@@ -5,34 +5,60 @@ plugins {
     id 'checkstyle'
 }
 
+application {
+    mainClass.set("shoai.Main")  // Custom for your project
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.openjfx:javafx-controls:20.0.1'
-    implementation 'org.openjfx:javafx-fxml:20.0.1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
+    testImplementation 'junit:junit:4.13.1'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+    String javaFxVersion = '17.0.7'
+
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'linux'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'linux'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
 }
 
-application {
-    mainClass.set("shoai.Main")
+test {
+    useJUnitPlatform()
+
+    testLogging {
+        events "passed", "skipped", "failed"
+
+        showExceptions true
+        exceptionFormat "full"
+        showCauses true
+        showStackTraces true
+        showStandardStreams = false
+    }
 }
 
 shadowJar {
-    archiveBaseName.set("ShoAI")
-    archiveClassifier.set("") // Fat JAR without classifier
-    archiveVersion.set("") // Optional: Remove version from JAR file name if desired
-    mergeServiceFiles()
+    archiveFileName = 'shoai.jar'  // Custom for your project
+    archiveBaseName = "ShoAI"
+    archiveClassifier = null  // No classifier for the fat JAR
 }
 
 run {
     standardInput = System.in
+    enableAssertions = true
     jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
+            '--module-path', configurations.runtimeClasspath.asPath,
     ]
 }
 
@@ -40,22 +66,6 @@ checkstyle {
     toolVersion = '10.2'
 }
 
-sourceSets {
-    main {
-        resources {
-            srcDir 'src/main/resources'
-        }
-    }
-}
-
 processResources {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
-tasks.withType(JavaExec) {
-    // Ensure JavaFX modules are included in runtime classpath
-    jvmArgs += [
-            '--module-path', sourceSets.main.output.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
 }
